syntax = "proto3";
package abci;

option go_package = "github.com/gnolang/gno/pkgs/bft/abci/types/pb";

// imports
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "github.com/gnolang/gno/pkgs/crypto/merkle/merkle.proto";

// messages
message RequestBase {
}

message RequestEcho {
	RequestBase RequestBase = 1;
	string Message = 2;
}

message RequestFlush {
	RequestBase RequestBase = 1;
}

message RequestInfo {
	RequestBase RequestBase = 1;
}

message RequestSetOption {
	RequestBase RequestBase = 1;
	string Key = 2;
	string Value = 3;
}

message RequestInitChain {
	RequestBase RequestBase = 1;
	google.protobuf.Timestamp Time = 2;
	string ChainID = 3;
	ConsensusParams ConsensusParams = 4;
	repeated ValidatorUpdate Validators = 5;
	bytes AppStateBytes = 6;
}

message RequestQuery {
	RequestBase RequestBase = 1;
	bytes Data = 2;
	string Path = 3;
	sint64 Height = 4;
	bool Prove = 5;
}

message RequestBeginBlock {
	RequestBase RequestBase = 1;
	bytes Hash = 2;
	google.protobuf.Any Header = 3;
	LastCommitInfo LastCommitInfo = 4;
}

message RequestCheckTx {
	RequestBase RequestBase = 1;
	bytes Tx = 2;
	sint64 Type = 3;
}

message RequestDeliverTx {
	RequestBase RequestBase = 1;
	bytes Tx = 2;
}

message RequestEndBlock {
	RequestBase RequestBase = 1;
	sint64 Height = 2;
}

message RequestCommit {
	RequestBase RequestBase = 1;
}

message ResponseBase {
	google.protobuf.Any Error = 1;
	bytes Data = 2;
	repeated google.protobuf.Any Events = 3;
	string Log = 4;
	string Info = 5;
}

message ResponseException {
	ResponseBase ResponseBase = 1;
}

message ResponseEcho {
	ResponseBase ResponseBase = 1;
	string Message = 2;
}

message ResponseFlush {
	ResponseBase ResponseBase = 1;
}

message ResponseInfo {
	ResponseBase ResponseBase = 1;
	string ABCIVersion = 2;
	string AppVersion = 3;
	sint64 LastBlockHeight = 4;
	bytes LastBlockAppHash = 5;
}

message ResponseSetOption {
	ResponseBase ResponseBase = 1;
}

message ResponseInitChain {
	ResponseBase ResponseBase = 1;
	ConsensusParams ConsensusParams = 2;
	repeated ValidatorUpdate Validators = 3;
}

message ResponseQuery {
	ResponseBase ResponseBase = 1;
	bytes Key = 2;
	bytes Value = 3;
	tm.Proof Proof = 4;
	sint64 Height = 5;
}

message ResponseBeginBlock {
	ResponseBase ResponseBase = 1;
}

message ResponseCheckTx {
	ResponseBase ResponseBase = 1;
	sint64 GasWanted = 2;
	sint64 GasUsed = 3;
}

message ResponseDeliverTx {
	ResponseBase ResponseBase = 1;
	sint64 GasWanted = 2;
	sint64 GasUsed = 3;
}

message ResponseEndBlock {
	ResponseBase ResponseBase = 1;
	repeated ValidatorUpdate ValidatorUpdates = 2;
	ConsensusParams ConsensusParams = 3;
	repeated google.protobuf.Any Events = 4;
}

message ResponseCommit {
	ResponseBase ResponseBase = 1;
}

message StringError {
	string Value = 1;
}

message ConsensusParams {
	BlockParams Block = 1;
	ValidatorParams Validator = 2;
}

message BlockParams {
	sint64 MaxTxBytes = 1;
	sint64 MaxDataBytes = 2;
	sint64 MaxBlockBytes = 3;
	sint64 MaxGas = 4;
	sint64 TimeIotaMS = 5;
}

message ValidatorParams {
	repeated string PubKeyTypeURLs = 1;
}

message ValidatorUpdate {
	bytes Address = 1;
	google.protobuf.Any PubKey = 2;
	sint64 Power = 3;
}

message LastCommitInfo {
	sint32 Round = 1;
	repeated VoteInfo Votes = 2;
}

message VoteInfo {
	bytes Address = 1;
	sint64 Power = 2;
	bool SignedLastBlock = 3;
}

message EventString {
	string Value = 1;
}

message MockHeader {
	string Version = 1;
	string ChainID = 2;
	sint64 Height = 3;
	google.protobuf.Timestamp Time = 4;
	sint64 NumTxs = 5;
	sint64 TotalTxs = 6;
}